# mirror-bench

./: .dockerignore  .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
src/mirror_bench/: __init__.py  __main__.py  cli.py  display.py  distro.py  models.py
src/mirror_bench/benchmark/: __init__.py  probe.py  scorer.py  tls.py  transport.py
src/mirror_bench/discovery/: __init__.py  arch.py  base.py  debian.py  fedora.py  mint.py  ubuntu.py
tests/: conftest.py  test_cli.py  test_discovery.py  test_distro.py  test_integration.py  test_probe.py  test_scorer.py
tests/fixtures/: arch_status.json  debian_masterlist.txt  fedora_mirrorlist.txt  mint_mirrors.html  ubuntu_mirrors.txt
